--- a/第7章-DQN算法.ipynb
+++ b/第7章-DQN算法.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
+    "id": "OHoSU6uI-xIt",
     "ExecuteTime": {
-     "end_time": "2023-08-09T02:56:20.938857400Z",
-     "start_time": "2023-08-09T02:56:20.851145300Z"
-    },
-    "id": "OHoSU6uI-xIt"
+     "end_time": "2023-08-10T02:39:02.459656700Z",
+     "start_time": "2023-08-10T02:39:00.318213800Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
+    "id": "TsptTKz6-xIv",
     "ExecuteTime": {
-     "end_time": "2023-08-09T02:56:20.938857400Z",
-     "start_time": "2023-08-09T02:56:20.860751200Z"
-    },
-    "id": "TsptTKz6-xIv"
+     "end_time": "2023-08-10T02:39:02.474976800Z",
+     "start_time": "2023-08-10T02:39:02.459656700Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -54,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
+    "id": "_qO6koMR-xIw",
     "ExecuteTime": {
-     "end_time": "2023-08-09T02:56:20.938857400Z",
-     "start_time": "2023-08-09T02:56:20.891993400Z"
-    },
-    "id": "_qO6koMR-xIw"
+     "end_time": "2023-08-10T02:39:02.507266Z",
+     "start_time": "2023-08-10T02:39:02.474976800Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -78,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
+    "id": "wxZItCX4-xIw",
     "ExecuteTime": {
-     "end_time": "2023-08-09T02:56:20.948407700Z",
-     "start_time": "2023-08-09T02:56:20.923236200Z"
-    },
-    "id": "wxZItCX4-xIw"
+     "end_time": "2023-08-10T02:39:02.595805700Z",
+     "start_time": "2023-08-10T02:39:02.507266Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -146,12 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-08-09T02:56:21.061963200Z",
-     "start_time": "2023-08-09T02:56:20.948407700Z"
-    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
@@ -166,21 +162,32 @@
      "user_tz": -480
     },
     "id": "acJ1letz-xIx",
-    "outputId": "26487c0d-c504-44d6-eb15-5fb137b9488f"
+    "outputId": "26487c0d-c504-44d6-eb15-5fb137b9488f",
+    "ExecuteTime": {
+     "end_time": "2023-08-10T02:39:03.130619Z",
+     "start_time": "2023-08-10T02:39:02.595805700Z"
+    }
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'CartPoleEnv' object has no attribute 'seed'",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0:   0%|          | 0/50 [00:00<?, ?it/s]C:\\Users\\ThinkPad\\AppData\\Local\\Temp\\ipykernel_7084\\4185389945.py:24: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at ..\\torch\\csrc\\utils\\tensor_new.cpp:248.)\n",
+      "  state = torch.tensor([state], dtype=torch.float).to(self.device)\n",
+      "Iteration 0:   0%|          | 0/50 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "expected sequence of length 4 at dim 2 (got 0)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m random\u001b[38;5;241m.\u001b[39mseed(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     16\u001b[0m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mseed(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m---> 17\u001b[0m \u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mseed\u001b[49m(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     18\u001b[0m torch\u001b[38;5;241m.\u001b[39mmanual_seed(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     19\u001b[0m replay_buffer \u001b[38;5;241m=\u001b[39m ReplayBuffer(buffer_size)\n",
-      "File \u001b[1;32mF:\\github\\Hands-on-RL\\venv\\lib\\site-packages\\gym\\core.py:241\u001b[0m, in \u001b[0;36mWrapper.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    239\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m    240\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maccessing private attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is prohibited\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 241\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mF:\\github\\Hands-on-RL\\venv\\lib\\site-packages\\gym\\core.py:241\u001b[0m, in \u001b[0;36mWrapper.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    239\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m    240\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maccessing private attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is prohibited\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 241\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mF:\\github\\Hands-on-RL\\venv\\lib\\site-packages\\gym\\core.py:241\u001b[0m, in \u001b[0;36mWrapper.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    239\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m    240\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maccessing private attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is prohibited\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 241\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'CartPoleEnv' object has no attribute 'seed'"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[6], line 32\u001B[0m\n\u001B[0;32m     30\u001B[0m done \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mFalse\u001B[39;00m\n\u001B[0;32m     31\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m done:\n\u001B[1;32m---> 32\u001B[0m     action \u001B[38;5;241m=\u001B[39m \u001B[43magent\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtake_action\u001B[49m\u001B[43m(\u001B[49m\u001B[43mstate\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     33\u001B[0m     next_state, reward, done, _ \u001B[38;5;241m=\u001B[39m env\u001B[38;5;241m.\u001B[39mstep(action)\n\u001B[0;32m     34\u001B[0m     replay_buffer\u001B[38;5;241m.\u001B[39madd(state, action, reward, next_state, done)\n",
+      "Cell \u001B[1;32mIn[5], line 24\u001B[0m, in \u001B[0;36mDQN.take_action\u001B[1;34m(self, state)\u001B[0m\n\u001B[0;32m     22\u001B[0m     action \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mrandom\u001B[38;5;241m.\u001B[39mrandint(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39maction_dim)\n\u001B[0;32m     23\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m---> 24\u001B[0m     state \u001B[38;5;241m=\u001B[39m \u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtensor\u001B[49m\u001B[43m(\u001B[49m\u001B[43m[\u001B[49m\u001B[43mstate\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdtype\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfloat\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39mto(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdevice)\n\u001B[0;32m     25\u001B[0m     action \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mq_net(state)\u001B[38;5;241m.\u001B[39margmax()\u001B[38;5;241m.\u001B[39mitem()\n\u001B[0;32m     26\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m action\n",
+      "\u001B[1;31mValueError\u001B[0m: expected sequence of length 4 at dim 2 (got 0)"
      ]
     }
    ],
@@ -201,7 +208,6 @@
     "env = gym.make(env_name)\n",
     "random.seed(0)\n",
     "np.random.seed(0)\n",
-    "env.seed(0)\n",
     "torch.manual_seed(0)\n",
     "replay_buffer = ReplayBuffer(buffer_size)\n",
     "state_dim = env.observation_space.shape[0]\n",
@@ -214,7 +220,7 @@
     "    with tqdm(total=int(num_episodes / 10), desc='Iteration %d' % i) as pbar:\n",
     "        for i_episode in range(int(num_episodes / 10)):\n",
     "            episode_return = 0\n",
-    "            state = env.reset()\n",
+    "            state = env.reset(seed=0)\n",
     "            done = False\n",
     "            while not done:\n",
     "                action = agent.take_action(state)\n",
@@ -269,9 +275,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-08-09T02:56:21.061963200Z"
-    },
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 573
@@ -287,7 +290,10 @@
      "user_tz": -480
     },
     "id": "AFiCxG4W-xIy",
-    "outputId": "b5610f6f-8df9-4156-ecb9-e8cb2901133c"
+    "outputId": "b5610f6f-8df9-4156-ecb9-e8cb2901133c",
+    "ExecuteTime": {
+     "start_time": "2023-08-10T02:39:03.120440400Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -310,10 +316,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "CDk1DgrL-xIz",
     "ExecuteTime": {
-     "start_time": "2023-08-09T02:56:21.061963200Z"
-    },
-    "id": "CDk1DgrL-xIz"
+     "start_time": "2023-08-10T02:39:03.128592500Z"
+    }
    },
    "outputs": [],
    "source": [
